<resources>
    <string name="app_name">AndroidCommonUtil</string>
    <string name="activity_main">Android工具</string>
    <string name="activity_na_h5">NA与H5界面交互，调用方法</string>
    <string name="activity_code">二维码</string>
    <string name="activity_html">HTML TextView</string>
    <string name="activity_fragment">Fragment测试</string>
    <string name="activity_dialog">Dialog Activity样式</string>
    <string name="activity_animation">Animation动画研究</string>
    <string name="activity_keyboard">Keyboard软键盘</string>
    <string name="activity_webview">WebView</string>
    <string name="activity_recyclerview">RecyclerView</string>
    <string name="activity_view">高级UI</string>
    <string name="activity_wx">微信分享</string>
    <string name="activity_wb">微博分享</string>
    <string name="activity_common_scroll">WebView滚动，上下面板同步滑动</string>
    <string name="activity_test">测试界面</string>
    <string name="activity_svg">SVG界面</string>
    <string name="activity_live_data_bus">组件通信框架——LiveDataBus</string>

    <!--appLayout-->
    <string name="bye_burger_float_behavior">com.mtx.androidcommonutil.ui.widget.applayout.behavior.ByeBurgerFloatButtonBehavior</string>
    <string name="bye_burger_bottom_behavior">com.mtx.androidcommonutil.ui.widget.applayout.behavior.ByeBurgerBottomBehavior</string>
    <string name="bye_burger_title_behavior">com.mtx.androidcommonutil.ui.widget.applayout.behavior.ByeBurgerTitleBehavior</string>

    <string name="place_holder_rmb">原价%1$s,现价%2$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">取消</string>
</resources>
