<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goNaH5Activity"
                android:text="NA与H5界面交互，调用方法"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goCodeActivity"
                android:text="@string/activity_code"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goHTMLActivity"
                android:text="@string/activity_html"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goFragmentActivity"
                android:text="@string/activity_fragment"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goDialogActivity"
                android:text="@string/activity_dialog"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goAnimationActivity"
                android:text="@string/activity_animation"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goWebViewActivity"
                android:text="@string/activity_webview"/>
   <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goRecyclerViewActivity"
                android:text="@string/activity_recyclerview"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:onClick="goTestActivity"
                android:text="TEST"/>

    </LinearLayout>
</ScrollView>